RESOLVED FIXED310118
[JSC] Fix tryConvertToStrictInt32's duplicate work
https://bugs.webkit.org/show_bug.cgi?id=310118
Summary [JSC] Fix tryConvertToStrictInt32's duplicate work
Yusuke Suzuki
Reported 2026-03-17 11:10:01 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-17 11:10:21 PDT
Yusuke Suzuki
Comment 2 2026-03-17 11:11:34 PDT
EWS
Comment 3 2026-03-17 11:43:30 PDT
Committed 309422@main (a9539aeb5791): <https://commits.webkit.org/309422@main> Reviewed commits have been landed. Closing PR #60790 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.