Cherry-pick 309422@main (a9539aeb5791). https://bugs.webkit.org/show_bug.cgi?id=310118

[JSC] Fix tryConvertToStrictInt32's duplicate work
    https://bugs.webkit.org/show_bug.cgi?id=310118
    rdar://172760056

    Reviewed by Yijia Huang.

    Previous patch had an issue that we convert double to int32_t again
    unnecessarily. This patch fixes this efficiency problem.

    * Source/JavaScriptCore/runtime/MathCommon.h:
    (JSC::tryConvertToStrictInt32):

    Canonical link: https://commits.webkit.org/309422@main

Canonical link: https://commits.webkit.org/305877.700@webkitglib/2.52